--- a/src/main/resources/templates/user/events/showEvent.html
+++ b/src/main/resources/templates/user/events/showEvent.html
@@ -130,7 +130,7 @@
 
 <div class="container-fluid" style="margin-top: 50px">
 
-
+<!--Showing Heroku file-->
     <div class="col-md-3">
         <div class="single-movie-listing">
             <div class="row">
